--- a/Showing_importance_of_size_using_cars_dataset.ipynb
+++ b/Showing_importance_of_size_using_cars_dataset.ipynb
@@ -391,7 +391,7 @@
     "    if not isRGB(im):\n",
     "        print(f\"{img} is not RGB. Removing file...\")\n",
     "        r_img_files.append(img)\n",
-    "    os.remove(path + img) #remove from disk if not RGB\n",
+    "        os.remove(path + img) #remove from disk if not RGB\n",
     "    else:\n",
     "        n_img_files.append(img)\n",
     "print(f\"Completed Check. Number of Files after check: {len(n_img_files)}\")\n",
@@ -1412,7 +1412,8 @@
     }
    ],
    "source": [
-    "int(0.65 * (l_aap_p.shape[0] + ul_aap_p.shape[0])) - l_aap_p.shape[0] # We have 4035 datasets to add"
+    "int(0.65 * (l_aap_p.shape[0] + ul_aap_p.shape[0])) - l_aap_p.shape[0] \n",
+    "# We have 4035 datasets to add"
    ]
   },
   {
@@ -1577,6 +1578,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions & Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We achieve the overall aim of establishing that labelling more data can help improve model quality. This simply affords better training for the model, since it has access to more information for improving its decision-making. In conclusion, as we increase the training proportion, we obtain better loss metrics on the hold-out instances.\n",
+    "\n",
+    "There are however other ways we could improve our model. Some of these include:\n",
+    "1. allowing hyperparameter tuning, even though this could take significantly more time\n",
+    "2. Increasing the size of our dataset by adding more instances. This increases the number of training instances proportionally and could effectively help with model quality\n",
+    "3. try other kinds of classifiers, especially non-linear types. `SGDClassifier` is a linear classifier which may not be able to learn some of the non-linearities in the dataset.\n",
+    "4. try other predefined models which are superior to `Resnet18` for the feature extraction stage.\n",
+    "5. alternatively just use other deep learning classifiers to complete the classification task, instead of using `SGDClassifier`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1600,7 +1629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
