--- a/Showing_importance_of_size_using_cars_dataset.ipynb
+++ b/Showing_importance_of_size_using_cars_dataset.ipynb
@@ -391,7 +391,7 @@
     "    if not isRGB(im):\n",
     "        print(f\"{img} is not RGB. Removing file...\")\n",
     "        r_img_files.append(img)\n",
-    "        os.remove(path + img) #remove from disk if not RGB\n",
+    "        os.remove(path + img) #remove from disk if not RGB.\n",
     "    else:\n",
     "        n_img_files.append(img)\n",
     "print(f\"Completed Check. Number of Files after check: {len(n_img_files)}\")\n",
@@ -465,7 +465,8 @@
     "    top=0.8,\n",
     "    wspace=0.05,\n",
     "    hspace=0.3) #Adjust image\n",
-    "    \n",
+    "\n",
+    "#This only plots when os.remove above is commented out. Otherwise, it gives an error\n",
     "plot_sample_data(r_img_files, all_labels, all_files, all_labs_1)"
    ]
   },
@@ -1629,7 +1630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
