--- a/Showing_importance_of_size_using_cars_dataset.ipynb
+++ b/Showing_importance_of_size_using_cars_dataset.ipynb
@@ -1595,10 +1595,11 @@
     "\n",
     "There are however other ways we could improve our model. Some of these include:\n",
     "1. allowing hyperparameter tuning, even though this could take significantly more time\n",
-    "2. Increasing the size of our dataset by adding more instances. This increases the number of training instances proportionally and could effectively help with model quality\n",
-    "3. try other kinds of classifiers, especially non-linear types. `SGDClassifier` is a linear classifier which may not be able to learn some of the non-linearities in the dataset.\n",
-    "4. try other predefined models which are superior to `Resnet18` for the feature extraction stage.\n",
-    "5. alternatively just use other deep learning classifiers to complete the classification task, instead of using `SGDClassifier`."
+    "2. introducing image augmentation into the pipeline, as the training loss appears to show some overfitting.\n",
+    "3. Increasing the size of our dataset by adding more instances. This increases the number of training instances proportionally and could effectively help with model quality\n",
+    "4. try other kinds of classifiers, especially non-linear types. `SGDClassifier` is a linear classifier which may not be able to learn some of the non-linearities in the dataset.\n",
+    "5. try other predefined models which are superior to `Resnet18` for the feature extraction stage.\n",
+    "6. alternatively just use other deep learning classifiers to complete the classification task, instead of using `SGDClassifier`."
    ]
   },
   {
@@ -1630,7 +1631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
